kustomize/prd/deployment-patch.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: tinydemo
spec:
  template:
    spec:
      containers:
      - name: tinydemo
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - tinydemo
        from:
          kind: ImageStreamTag
          namespace: demo
          name: prd-20220502212326-1-c816d9ed
